fix: адресованы замечания по коду